--- a/offTIME/ui/updater.ui
+++ b/offTIME/ui/updater.ui
@@ -23,19 +23,29 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Updater</string>
+   <string>업데이트 확인</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="../resources.qrc">
+    <normaloff>:/icon/icon/iconSmall.png</normaloff>:/icon/icon/iconSmall.png</iconset>
   </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>5</y>
-     <width>151</width>
-     <height>20</height>
+     <x>5</x>
+     <y>10</y>
+     <width>228</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
     <string>업데이트를 확인하는 중...</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QProgressBar" name="progressBar">
@@ -76,8 +86,11 @@
    <property name="value">
     <number>-1</number>
    </property>
+   <property name="alignment">
+    <set>Qt::AlignJustify|Qt::AlignVCenter</set>
+   </property>
    <property name="textVisible">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="orientation">
     <enum>Qt::Horizontal</enum>
@@ -85,8 +98,13 @@
    <property name="invertedAppearance">
     <bool>false</bool>
    </property>
+   <property name="textDirection">
+    <enum>QProgressBar::TopToBottom</enum>
+   </property>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
