--- a/offTIME/ui/mainapp.ui
+++ b/offTIME/ui/mainapp.ui
@@ -529,7 +529,7 @@ color: rgb(0, 0, 56);</string>
        <x>250</x>
        <y>40</y>
        <width>61</width>
-       <height>16</height>
+       <height>21</height>
       </rect>
      </property>
      <property name="autoFillBackground">
@@ -545,7 +545,7 @@ color: rgb(0, 0, 56);</string>
        <x>310</x>
        <y>40</y>
        <width>51</width>
-       <height>16</height>
+       <height>21</height>
       </rect>
      </property>
      <property name="autoFillBackground">
@@ -742,14 +742,15 @@ color: rgb(0, 0, 56);</string>
    <widget class="QPushButton" name="createShortcutButton">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>115</y>
-      <width>151</width>
-      <height>21</height>
+      <x>260</x>
+      <y>70</y>
+      <width>121</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
-     <string>바탕화면에 바로가기 추가</string>
+     <string>바탕화면에
+바로가기 추가</string>
     </property>
    </widget>
    <zorder>closeButton</zorder>
