--- a/offTIME/ui/info.ui
+++ b/offTIME/ui/info.ui
@@ -103,7 +103,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>120</y>
+     <y>150</y>
      <width>321</width>
      <height>31</height>
     </rect>
@@ -171,13 +171,18 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>80</y>
-     <width>211</width>
+     <y>100</y>
+     <width>271</width>
      <height>20</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>11</pointsize>
+    </font>
+   </property>
    <property name="text">
-    <string>&lt;a href=https://github.com/flickout/offTIME&gt;https://github.com/flickout/offTIME&lt;/a&gt;</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;a href=&quot;https://github.com/flickout/offTIME&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;https://github.com/paul-bh/offTIME&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
    <property name="openExternalLinks">
     <bool>true</bool>
@@ -193,15 +198,16 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>170</y>
+     <y>200</y>
      <width>321</width>
-     <height>71</height>
+     <height>91</height>
     </rect>
    </property>
    <property name="text">
     <string>이 프로그램은 GNU General Public License version 3.0 (GPLv3) 라이센스로 배포되었습니다. 
 
-개인, 기업, 관공서에서 자유롭게 사용할 수 있습니다.</string>
+개인, 기업, 관공서에서 자유롭게 사용할 수 있습니다. 
+이 프로그램을 재배포할 시 원작자를 표시해야 합니다.</string>
    </property>
    <property name="wordWrap">
     <bool>true</bool>
@@ -211,16 +217,26 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>270</y>
-     <width>191</width>
+     <y>80</y>
+     <width>281</width>
      <height>20</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>11</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
    <property name="text">
-    <string>ⓒ 2021 Byeong Hyun Park</string>
+    <string>ⓒ 2021 Byeong Hyun Park (박병현)</string>
    </property>
    <property name="wordWrap">
     <bool>true</bool>
+   </property>
+   <property name="openExternalLinks">
+    <bool>false</bool>
    </property>
   </widget>
   <zorder>logoSmall</zorder>
