--- a/offTIME/ui/info.ui
+++ b/offTIME/ui/info.ui
@@ -51,65 +51,17 @@
     <string>닫기</string>
    </property>
   </widget>
-  <widget class="Line" name="line">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>50</y>
-     <width>281</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="orientation">
-    <enum>Qt::Horizontal</enum>
-   </property>
-  </widget>
-  <widget class="QLabel" name="titleLabel">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>10</y>
-     <width>281</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>TwoCon</family>
-     <pointsize>11</pointsize>
-     <weight>50</weight>
-     <italic>false</italic>
-     <bold>false</bold>
-     <underline>false</underline>
-     <strikeout>false</strikeout>
-     <stylestrategy>PreferAntialias</stylestrategy>
-     <kerning>true</kerning>
-    </font>
-   </property>
-   <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:26pt; font-weight:600;&quot;&gt;offTIME&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-   </property>
-   <property name="scaledContents">
-    <bool>true</bool>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-   </property>
-   <property name="wordWrap">
-    <bool>true</bool>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>150</y>
+     <y>110</y>
      <width>321</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>ver 2110a 
+    <string>ver 2110c 
 최초버전 개발기간: 20210906-20211005</string>
    </property>
    <property name="wordWrap">
@@ -171,7 +123,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>100</y>
+     <y>70</y>
      <width>271</width>
      <height>20</height>
     </rect>
@@ -198,7 +150,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>200</y>
+     <y>160</y>
      <width>321</width>
      <height>91</height>
     </rect>
@@ -217,7 +169,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>80</y>
+     <y>50</y>
      <width>281</width>
      <height>20</height>
     </rect>
@@ -241,8 +193,6 @@
   </widget>
   <zorder>logoSmall</zorder>
   <zorder>closeButton</zorder>
-  <zorder>line</zorder>
-  <zorder>titleLabel</zorder>
   <zorder>label_3</zorder>
   <zorder>logo</zorder>
   <zorder>logoButton</zorder>
